# zoomies

./: .gitignore  .gitmodules  README.md  build_and_copy.sh  cmake_linux.sh  cmake_rpi3.sh  conan_rpi_release  requirements.txt  rpi-toolchain.cmake
data/calib/: camera_D.npy  camera_K.npy
data/map/: map.txt  map_0219.txt  notes.txt
data/track/0311/: path_fast
data/track/0928/: path_1_0  path_1_3  path_1_5  path_1_6  path_1_7
src/: CMakeLists.txt  conanfile.txt
src/common/: CMakeLists.txt  clock.cc  clock.h  color.cc  color.h
src/driver/: CMakeLists.txt  controlloop.cc  controlloop.h  datalogger.cc  datalogger.h  driver.cc  driver.h  driver_main.cc  esc_calib.cc
src/hw/: CMakeLists.txt  camera.cc  camera.h  camera_test.cc  hw.cc  hw.h  js.cc  js.h
src/localization/: CMakeLists.txt  localization_util.cc  localization_util.h  localization_util_test.cc  localizer.cc  localizer.h  map_maker.cc  pf.cc  pf.h  pf_main.cc  slam.cc
src/mcap/: CMakeLists.txt  mcap_main.cc  writer.cc  writer.h
src/proto/: CMakeLists.txt  gen.sh  proto_util.h
src/proto/zoomies/: zoomies.proto
src/ros/: CMakeLists.txt  gen.sh  ros_reader.cc  ros_reader.h  ros_test.cc  ros_types.cxx  ros_types.h  ros_types.idl  ros_util.h  ros_writer.cc  ros_writer.h
src/slam/: CMakeLists.txt  slam.cc  slam_util.cc  slam_util.h  slam_util_test.cc
src/sqlite/: CMakeLists.txt
src/track/: CMakeLists.txt  track.cc  track.h  track_test.cc
tools/: camera_calib.py  camera_replay.py  camera_table.py  camera_undistort.py  ceiling_solve.py  data_server.py  gen_ros_protos.sh  log_converter.py  log_fixer.py  map.ipynb
tools/racingpath/: import_path.ipynb  path_tum.ipynb  serde.py  testdata.py  tire.py  track.py
tools/ros/actionlib_msgs/: GoalID_pb2.py  GoalStatus_pb2.py
tools/ros/diagnostic_msgs/: DiagnosticStatus_pb2.py
tools/ros/geometry_msgs/: AccelStamped_pb2.py  AccelWithCovariance_pb2.py  Accel_pb2.py  Inertia_pb2.py  PointStamped_pb2.py  PolygonStamped_pb2.py  Polygon_pb2.py  PoseArray_pb2.py  Pose_pb2.py  Quaternion_pb2.py  TransformStamped_pb2.py  Transform_pb2.py  TwistStamped_pb2.py  TwistWithCovarianceStamped_pb2.py  TwistWithCovariance_pb2.py  Vector3_pb2.py  WrenchStamped_pb2.py  Wrench_pb2.py
tools/ros/nav_msgs/: OccupancyGrid_pb2.py  Path_pb2.py
tools/ros/rcl_interfaces/: Log_pb2.py
tools/ros/rosgraph_msgs/: Clock_pb2.py  Log_pb2.py
tools/ros/sensor_msgs/: BatteryState_pb2.py  CameraInfo_pb2.py  FluidPressure_pb2.py  Image_pb2.py  Imu_pb2.py  Joy_pb2.py  MultiDOFJointState_pb2.py  MultiEchoLaserScan_pb2.py  NavSatFix_pb2.py  Temperature_pb2.py  TimeReference_pb2.py
tools/ros/shape_msgs/: MeshTriangle_pb2.py  Plane_pb2.py
tools/ros/std_msgs/: ByteMultiArray_pb2.py  Byte_pb2.py  ColorRGBA_pb2.py  Duration_pb2.py  Empty_pb2.py  Float32MultiArray_pb2.py  Float64MultiArray_pb2.py  Int32MultiArray_pb2.py  Int64MultiArray_pb2.py  Int8_pb2.py  MultiArrayDimension_pb2.py  String_pb2.py  UInt16MultiArray_pb2.py  UInt32MultiArray_pb2.py  UInt32_pb2.py
tools/ros/stereo_msgs/: DisparityImage_pb2.py
tools/ros/trajectory_msgs/: JointTrajectoryPoint_pb2.py  MultiDOFJointTrajectoryPoint_pb2.py
tools/ros/visualization_msgs/: InteractiveMarkerControl_pb2.py  InteractiveMarker_pb2.py  MarkerArray_pb2.py  Marker_pb2.py  MenuEntry_pb2.py
tools/ros_msgs/ros/: builtins_pb2.py
tools/ros_msgs/ros/actionlib_msgs/: GoalStatusArray_pb2.py
tools/ros_msgs/ros/diagnostic_msgs/: DiagnosticArray_pb2.py  KeyValue_pb2.py
tools/ros_msgs/ros/geometry_msgs/: AccelWithCovarianceStamped_pb2.py  InertiaStamped_pb2.py  Point32_pb2.py  Point_pb2.py  PoseStamped_pb2.py  PoseWithCovarianceStamped_pb2.py  PoseWithCovariance_pb2.py  QuaternionStamped_pb2.py  Twist_pb2.py  Vector3Stamped_pb2.py
tools/ros_msgs/ros/nav_msgs/: MapMetaData_pb2.py  Odometry_pb2.py
tools/ros_msgs/ros/rosgraph_msgs/: TopicStatistics_pb2.py
tools/ros_msgs/ros/sensor_msgs/: CompressedImage_pb2.py  Illuminance_pb2.py  JointState_pb2.py  JoyFeedbackArray_pb2.py  JoyFeedback_pb2.py  LaserEcho_pb2.py  LaserScan_pb2.py  MagneticField_pb2.py  NavSatStatus_pb2.py  PointCloud2_pb2.py  PointField_pb2.py  Range_pb2.py  RegionOfInterest_pb2.py  RelativeHumidity_pb2.py
tools/ros_msgs/ros/shape_msgs/: Mesh_pb2.py  SolidPrimitive_pb2.py
tools/ros_msgs/ros/std_msgs/: Bool_pb2.py  Char_pb2.py  Float32_pb2.py  Float64_pb2.py  Header_pb2.py  Int16MultiArray_pb2.py  Int16_pb2.py  Int32_pb2.py  Int64_pb2.py  Int8MultiArray_pb2.py  MultiArrayLayout_pb2.py  Time_pb2.py  UInt16_pb2.py  UInt64MultiArray_pb2.py  UInt64_pb2.py  UInt8_pb2.py
tools/ros_msgs/ros/tf2_msgs/: TFMessage_pb2.py
tools/ros_msgs/ros/trajectory_msgs/: JointTrajectory_pb2.py  MultiDOFJointTrajectory_pb2.py
tools/ros_msgs/ros/visualization_msgs/: ImageMarker_pb2.py
